# illinois-school-explorer

./: .gitignore  AGENTS.md  PROJECT_OVERVIEW.md  README.md
backend/: .gitignore  README.md  nixpacks.toml  pyproject.toml  pytest.ini
backend/app/: database.py  main.py  models.py
backend/app/api/: __init__.py  schools.py  search.py  top_scores.py
backend/app/services/: __init__.py  top_scores.py
backend/app/utils/: __init__.py  convert_txt_to_xlsx.py  historical_loader.py  import_data.py  import_historical_trends.py
backend/data/: schools.db  schools.db.backup
backend/docs/: API_ENDPOINTS.md  DATABASE_SCHEMA.md
backend/tests/: conftest.py  test_convert_txt_to_xlsx.py  test_database.py  test_historical_loader.py  test_historical_yearly_data.py  test_import_data.py  test_import_historical_yearly_data.py  test_integration.py  test_main.py  test_models.py  test_schools_api.py  test_search_api.py  test_top_scores_api.py  test_top_scores_service.py
backend/tests/data/historical/: README.md
docs/: PROMPTS.md  feature-historical-yearly-data-display.md  trend-data-workflow.md
docs/journal/: claude-notes.md
docs/plans/: 2025-11-05-frontend-implementation-plan.md  2025-11-05-illinois-school-explorer-design.md  2025-11-06-phase1-backend-foundation.md  2025-11-06-phase2-backend-api.md  2025-11-07-phase3-frontend-foundation.md  2025-11-08-phase4-core-components.md  2025-11-10-phase5-comparison-feature.md  2025-11-11-top-scores-design.md  (+7 more)
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts
(+65 files in other folders)
