# ABOUTME: Project metadata and dependencies for backend services
# ABOUTME: Configures uv-managed Python package requirements and build backend
[project]
name = "illinois-school-backend"
version = "0.1.0"
description = "Illinois School Explorer Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.1.4",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "app",
    "tests",
    "pyproject.toml",
    "README.md",
]
